added validator middleware to articles/add post route

--- a/nodekb/views/layout.pug
+++ b/nodekb/views/layout.pug
@@ -21,11 +21,12 @@ html(lang="en")
                 li.nav-item
                     a.nav-link(href='/articles/add') Add Articles
     .container
-            block content
-            br
-            hr
-            footer
-                p Copyright &copy; 2019
+        != messages('message', locals)
+        block content
+        br
+        hr
+        footer
+            p Copyright &copy; 2019
     script(src="/bower_components/jquery/dist/jquery.js")
     script(src="/bower_components/bootstrap/dist/js/bootstrap.js")
     script(src="/js/main.js")
