--- a/nodekb/views/layout.pug
+++ b/nodekb/views/layout.pug
@@ -22,6 +22,9 @@ html(lang="en")
                     a.nav-link(href='/articles/add') Add Articles
     .container
         != messages('message', locals)
+        if errors   
+            each error, i in errors
+                div(class='alert alert-danger') #{error.msg}
         block content
         br
         hr
