--- a/nodekb/views/layout.pug
+++ b/nodekb/views/layout.pug
@@ -20,11 +20,16 @@ html(lang="en")
                         span.sr-only (current)
                 li.nav-item
                     a.nav-link(href='/articles/add') Add Articles
+                li.nav-item
+                    a.nav-link(href='/users/login') Login
+                li.nav-item
+                    a.nav-link(href='/users/register') Register
     .container
         != messages('message', locals)
         if errors   
             each error, i in errors
                 div(class='alert alert-danger') #{error.msg}
+    .container
         block content
         br
         hr
