--- a/nodekb/views/layout.pug
+++ b/nodekb/views/layout.pug
@@ -13,17 +13,22 @@ html(lang="en")
         button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation')
             span.navbar-toggler-icon
         #navbarNav.collapse.navbar-collapse
-            ul.navbar-nav
+            ul.nav.navbar-nav
                 li.nav-item.active
                     a.nav-link(href='/')
                         | Home 
                         span.sr-only (current)
                 li.nav-item
                     a.nav-link(href='/articles/add') Add Articles
-                li.nav-item
-                    a.nav-link(href='/users/login') Login
-                li.nav-item
-                    a.nav-link(href='/users/register') Register
+            ul.nav.navbar-nav.navbar-right
+                if user
+                    li.nav-item 
+                        a.nav-link(href='/users/logout')  Logout
+                else 
+                    li.nav-item
+                        a.nav-link(href='/users/login') Login
+                    li.nav-item
+                        a.nav-link(href='/users/register') Register
     .container
         != messages('message', locals)
         if errors   
